# pulley

./: CMakeLists.txt  main.cpp
assertions/: CMakeLists.txt  main.cpp
include/pulley/algorithms/: adjacent_elements_for_each.hpp  adjacent_elements_for_each_if.hpp  all_of.hpp  any_pairs.hpp  back.hpp  count_if.hpp  find.hpp  for_each.hpp  front.hpp  remove.hpp  skip.hpp  tail.hpp  take.hpp  transform.hpp
include/pulley/algorithms/types/: back.hpp  front.hpp  tail_empty.hpp  tail_size.hpp  transform.hpp
include/pulley/utitlities/: null_type.hpp
